Fix excessive width on mobile size

--- a/public/assets/css/fookup.css
+++ b/public/assets/css/fookup.css
@@ -271,7 +271,11 @@ a:hover, a:focus {
 @media (max-width: 768px) {
 
   .header {
-    background: url(../goicuon-lores.jpg) no-repeat center center scroll;
+    background: url(../goicuon-lores.jpg) no-repeat center center fixed;
+  }
+
+  .vert-text h1 {
+    padding: 0;
   }
 
   .callout {
